# cpp_general_template

./: .clang-format  .clang-tidy  .clangd  .gitignore  README.md  build.sh
cmake/: Config.cmake  ModuleInfo.cmake  PCH.cmake  PrettyPrint.cmake  QtInfo.cmake  mingw-w64-toolchain.cmake
cmake/core/: PCH.cmake  ProjectInfo.cmake  ProjectVerbose.cmake  mingw-w64-toolchain.cmake
cmake/misc/: ModuleInfo.cmake  PrettyPrint.cmake  PrettySymbols.cmake  QtInfo.cmake
include/: pch.h
include/core/: async_logger.h  message_queue.hpp  queue.h
include/utils/: action_types.h  launch.h  non-copyable.h  singleton.h
scripts/: b_boost.sh  b_nlohmann_json.sh  b_openssl.sh  b_spdlog.sh  build.sh  common_color.sh  common_env.sh  install.sh
src/core/: CMakeLists.txt  async_logger.cpp
